<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <!--https://www.youtube.com/watch?v=tPV8xA7m-iw-->
    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/chats_icon"
        android:title="@string/title_chats" />

    <item
        android:id="@+id/navigation_blogs"
        android:icon="@drawable/blogs_icon"
        android:title="@string/title_blogs" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/news_icon"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_roommate"
        android:icon="@drawable/roommate_icon"
        android:title="@string/title_roommate" />

    <item
        android:id="@+id/navigation_market"
        android:icon="@drawable/market_icon"
        android:title="@string/title_market" />
</menu>
